Fix content alignment.

--- a/_sass/default.scss
+++ b/_sass/default.scss
@@ -108,9 +108,12 @@ body {
 // End Header
 
 .content {
-  height: 100%;
-  margin-left: 200px;
-  padding: 1px 16px;
+  alignment-baseline: center;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 800px;
+  overflow: hidden;
+  padding: 16px 16px;
 }
 
 
